Added timer to game branches.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/global.css" />
     <title>Elemental Showdown</title>
+    <style>
+      body {
+          font-family: Arial, sans-serif;
+          text-align: center;
+          margin-top: 50px;
+      }
+      
+  </style>
   </head>
   <body>
     <h1>Elemental Showdown</h1>
@@ -66,6 +74,10 @@
 
     <button>Sign in</button>
     <button>Play anonymously</button>
+
+    
+
+    <script src="script.js"></script>
 
     <script type="text/javascript" src="./scripts/script.js"></script>
   </body>
