--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/global.css" />
     <title>Anonymous-Elemental-Showdown</title>
+
+    #timer {
+      font-size: 48px;
+      margin-bottom: 20px;
+  }
+  #startBtn, #stopBtn, #resetBtn {
+      padding: 10px 20px;
+      margin: 5px;
+      font-size: 16px;
+      cursor: pointer;
+  }
+  
   </head>
   <body>
     <h1>Start</h1>
+
+    <h1>Round Timer</h1>
+    <div id="timer">00:00</div>
+    <button id="startBtn">Start</button>
+    <button id="stopBtn">Stop</button>
+    <button id="resetBtn">Reset</button>
+
     <script type="text/javascript" src="../scripts/script.js"></script>
   </body>
 </html>
