Added a captial latter on Welcome.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1>Elemental Showdown</h1>
-    <p>welcome young one!</p>
+    <p>Welcome young one!</p>
     <p>
       In a six-choice game inspired by rock-paper-scissors and the Chinese
       philosophy of Wu Xing, the elements could interact as follows:
