--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -31,22 +31,15 @@
     <link rel="shortcut icon" type="image/x-icon" href="/path/to/favicon.ico" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="../styles/global.css" />
-    <title>Anonymous-Elemental-Showdown</title>
+    <title>Elemental Showdown - Anonymous</title>
 
-    #timer {
-      font-size: 48px;
-      margin-bottom: 20px;
-  }
-  #startBtn, #stopBtn, #resetBtn {
-      padding: 10px 20px;
-      margin: 5px;
-      font-size: 16px;
-      cursor: pointer;
-  }
-  
+    #timer { font-size: 48px; margin-bottom: 20px; } #startBtn, #stopBtn,
+    #resetBtn { padding: 10px 20px; margin: 5px; font-size: 16px; cursor:
+    pointer; }
   </head>
   <body>
-    <h1>Start</h1>
+    <h1>Welcome to Elemental Showdown!</h1>
+    <p>Playing as Shadow warrior</p>
 
     <h1>Round Timer</h1>
     <div id="timer">00:00</div>
