Added scorisng system, kinda.

--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -41,6 +41,7 @@
     <p>Playing as Shadow Warrior</p>
 
     <h1>Elemental Showdown</h1>
+    <div id="score">Player: 0 | Computer: 0</div>
     <div class="choices">
         <div class="choice" onclick="playGame('fire')">Fire</div>
         <div class="choice" onclick="playGame('earth')">Earth</div>
