changed layout and added a hero section and added a logo

--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -33,9 +33,9 @@
     <link rel="stylesheet" href="../styles/global.css" />
     <title>Elemental Showdown - Anonymous</title>
 
-    #timer { font-size: 48px; margin-bottom: 20px; } #startBtn, #stopBtn,
+    <!-- #timer { font-size: 48px; margin-bottom: 20px; } #startBtn, #stopBtn,
     #resetBtn { padding: 10px 20px; margin: 5px; font-size: 16px; cursor:
-    pointer; }
+    pointer; } -->
   </head>
   <body>
     <h1>Welcome to Elemental Showdown!</h1>
