changed layout on the home page added assets and changed the look and style as per Waris

--- a/index.html
+++ b/index.html
@@ -57,13 +57,45 @@
       </div>
       <div class="header-container">
         <h1 class="header-title">Elemental Showdown</h1>
-
         <p class="header-subtitle">Welcome, young one!</p>
-        <p class="header-description">
-          Elemental Showdown is a six-choice game inspired by
-          rock-paper-scissors and the Chinese philosophy of Wu Xing. The
-          elements interact as follows:
-        </p>
+        <div class="header-description-container">
+          <div class="vertical-line"></div>
+          <div class="header-content">
+            <p class="header-description">
+              Test your elemental might against our digital overlord - The
+              Singularity! The rules of the game are as follows:
+            </p>
+            <ul class="header-description-list">
+              <li>
+                You will fight in battles carried over a maximum of 3 rounds.
+              </li>
+              <li>
+                Each battle is best of 3. Win 2 rounds before The Singularity
+                does and you win the battle!
+              </li>
+              <li>
+                Every round you will pick 1 of six elements to battle against
+                whichever element The Singularity chooses.
+              </li>
+              <li>
+                Each of the traditional Chinese elements will beat 2 of them and
+                be beaten by the other 2.
+              </li>
+              <li>
+                Check the cards below to see this for each of the 6 elements.
+              </li>
+              <li>
+                Beware though! You will only have 3 seconds to decide which
+                element you'll use in combat so act swiftly.
+              </li>
+            </ul>
+            <p class="header-description">
+              Now you can choose to enter the arena anonymously or fight under
+              your own name. See how many battles you can survive against The
+              Singularity, Good Luck!
+            </p>
+          </div>
+        </div>
       </div>
 
       <!-- model -->
@@ -87,6 +119,9 @@
 
       <div class="card-container">
         <div class="card">
+          <div>
+            <img src="./assets/img/fire-bw.png" alt="Fire" />
+          </div>
           <h3>Fire</h3>
           <ul>
             <li>Defeats: Wood, Air</li>
@@ -94,6 +129,9 @@
           </ul>
         </div>
         <div class="card">
+          <div>
+            <img src="./assets/img/air-bw.png" alt="Fire" />
+          </div>
           <h3>Air</h3>
           <ul>
             <li>Defeats: Earth, Water</li>
@@ -101,6 +139,9 @@
           </ul>
         </div>
         <div class="card">
+          <div>
+            <img src="./assets/img/earth-bw.png" alt="Fire" />
+          </div>
           <h3>Earth</h3>
           <ul>
             <li>Defeats: Water, Fire</li>
@@ -108,6 +149,9 @@
           </ul>
         </div>
         <div class="card">
+          <div>
+            <img src="./assets/img/warter-bw.png" alt="Fire" />
+          </div>
           <h3>Water</h3>
           <ul>
             <li>Defeats: Fire, Iron</li>
@@ -115,6 +159,9 @@
           </ul>
         </div>
         <div class="card">
+          <div>
+            <img src="./assets/img/wood-bw.png" alt="Fire" />
+          </div>
           <h3>Wood</h3>
           <ul>
             <li>Defeats: Earth, Iron</li>
@@ -122,6 +169,9 @@
           </ul>
         </div>
         <div class="card">
+          <div>
+            <img src="./assets/img/iron-bw.png" alt="Fire" />
+          </div>
           <h3>Iron</h3>
           <ul>
             <li>Defeats: Wood, Air</li>
