--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -32,21 +32,24 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="../styles/global.css" />
     <title>Elemental Showdown - Anonymous</title>
-
-    <!-- #timer { font-size: 48px; margin-bottom: 20px; } #startBtn, #stopBtn,
-    #resetBtn { padding: 10px 20px; margin: 5px; font-size: 16px; cursor:
-    pointer; } -->
   </head>
   <body>
     <h1>Welcome to Elemental Showdown!</h1>
-    <p>Playing as Shadow warrior</p>
-
-    <h1>Round Timer</h1>
-    <div id="timer">00:00</div>
-    <button id="startBtn">Start</button>
-    <button id="stopBtn">Stop</button>
-    <button id="resetBtn">Reset</button>
-
-    <script type="text/javascript" src="../scripts/script.js"></script>
+    <p>Playing as Shadow Warrior</p>
+    <h1>Elemental Showdown</h1>
+    <div id="score">Player: 0 | Computer: 0</div>
+    <div class="choices">
+      <button class="choice" onclick="playGame('fire')">Fire</button>
+      <button class="choice" onclick="playGame('earth')">Earth</button>
+      <button class="choice" onclick="playGame('air')">Air</button>
+      <button class="choice" onclick="playGame('water')">Water</button>
+      <button class="choice" onclick="playGame('wood')">Wood</button>
+      <button class="choice" onclick="playGame('iron')">Iron</button>
+    </div>
+    <div id="result"></div>
+    <div id="roundResult"></div>
+    <div id="finalResult"></div>
+    <script type="text/javascript" src="/scripts/script.js"></script>
+    <script type="text/javascript" src="/scripts/anonymous-game.js"></script>
   </body>
 </html>
