--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -32,13 +32,6 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="../styles/global.css" />
     <title>Elemental Showdown - Anonymous</title>
-<<<<<<< HEAD
-=======
-
-    <!-- #timer { font-size: 48px; margin-bottom: 20px; } #startBtn, #stopBtn,
-    #resetBtn { padding: 10px 20px; margin: 5px; font-size: 16px; cursor:
-    pointer; } -->
->>>>>>> main
   </head>
   <body>
     <h1>Welcome to Elemental Showdown!</h1>
@@ -46,19 +39,17 @@
     <h1>Elemental Showdown</h1>
     <div id="score">Player: 0 | Computer: 0</div>
     <div class="choices">
-        <button class="choice" onclick="playGame('fire')">Fire</button>
-        <button class="choice" onclick="playGame('earth')">Earth</button>
-        <button class="choice" onclick="playGame('air')">Air</button>
-        <button class="choice" onclick="playGame('water')">Water</button>
-        <button class="choice" onclick="playGame('wood')">Wood</button>
-        <button class="choice" onclick="playGame('iron')">Iron</button>
+      <button class="choice" onclick="playGame('fire')">Fire</button>
+      <button class="choice" onclick="playGame('earth')">Earth</button>
+      <button class="choice" onclick="playGame('air')">Air</button>
+      <button class="choice" onclick="playGame('water')">Water</button>
+      <button class="choice" onclick="playGame('wood')">Wood</button>
+      <button class="choice" onclick="playGame('iron')">Iron</button>
     </div>
     <div id="result"></div>
-    <h2>Round Timer</h2>
-    <div id="timer">00:05</div>
-    <button id="startBtn">Start</button>
-    <button id="stopBtn">Stop</button>
-    <button id="resetBtn">Reset</button>
-    <script type="text/javascript" src="../scripts/script.js"></script>
+    <div id="roundResult"></div>
+    <div id="finalResult"></div>
+    <script type="text/javascript" src="/scripts/script.js"></script>
+    <script type="text/javascript" src="/scripts/anonymous-game.js"></script>
   </body>
 </html>
