added nav to second page

--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -34,6 +34,23 @@
     <title>Elemental Showdown - Anonymous</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="/index.html" class="logo-link">
+          <div class="logo-container">
+            <img src="../assets/img/logo.png" alt="Elemental Showdown Logo" />
+          </div>
+        </a>
+        <!-- audio -->
+        <audio id="backgroundAudio" loop>
+          <source src="../assets/sounds/s-bg.mp3" type="audio/mpeg" />
+          Your browser does not support the audio element.
+        </audio>
+
+        <button id="toggleAudio" class="audio-toggle">Toggle Audio</button>
+      </nav>
+    </header>
+    <main>
     <h1>Welcome to Elemental Showdown!</h1>
     <p>Playing as Shadow Warrior</p>
     <h1>Elemental Showdown</h1>
