add barebones end of game modal

--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -26,7 +26,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./assets/favicons/android-chrome-192x192.png"
+      href="../assets/favicons/android-chrome-192x192.png"
     />
     <link rel="shortcut icon" type="image/x-icon" href="/path/to/favicon.ico" />
     <link rel="stylesheet" href="./styles/global.css" />
@@ -34,21 +34,57 @@
     <title>Elemental Showdown - Anonymous</title>
   </head>
   <body>
-    <h1>Welcome to Elemental Showdown!</h1>
-    <p>Playing as Shadow Warrior</p>
-    <h1>Elemental Showdown</h1>
-    <div id="score">Player: 0 | Computer: 0</div>
-    <div class="choices">
-      <button class="choice" onclick="playGame('fire')">Fire</button>
-      <button class="choice" onclick="playGame('earth')">Earth</button>
-      <button class="choice" onclick="playGame('air')">Air</button>
-      <button class="choice" onclick="playGame('water')">Water</button>
-      <button class="choice" onclick="playGame('wood')">Wood</button>
-      <button class="choice" onclick="playGame('iron')">Iron</button>
-    </div>
-    <div id="result"></div>
-    <div id="roundResult"></div>
-    <div id="finalResult"></div>
+    <header>
+      <nav>
+        <a href="/index.html" class="logo-link">
+          <div class="logo-container">
+            <img src="../assets/img/logo.png" alt="Elemental Showdown Logo" />
+          </div>
+        </a>
+        <!-- audio -->
+        <audio id="backgroundAudio" loop>
+          <source src="../assets/sounds/s-bg.mp3" type="audio/mpeg" />
+          Your browser does not support the audio element.
+        </audio>
+
+        <button id="toggleAudio" class="audio-toggle">Toggle Audio</button>
+      </nav>
+    </header>
+    <main>
+    <!-- Modal -->
+      <div id="end-game-modal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h2>Your score</h2>
+          <div class="button-container">
+            <button id="play-again" class="custom-button" disabled onclick="navigateToGame()">
+              Play Again!
+            </button>
+            <button id="admit-defeat" class="custom-button secondary-button">
+              Admit defeat...
+            </button>
+          </div>
+        </div>
+      </div>
+      <h1>Welcome to Elemental Showdown!</h1>
+      <p>Playing as Shadow Warrior</p>
+      <h1>Elemental Showdown</h1>
+      <div id="score">Player: 0 | Computer: 0</div>
+      <div class="choices">
+        <button class="choice" onclick="playGame('fire')">Fire</button>
+        <button class="choice" onclick="playGame('earth')">Earth</button>
+        <button class="choice" onclick="playGame('air')">Air</button>
+        <button class="choice" onclick="playGame('water')">Water</button>
+        <button class="choice" onclick="playGame('wood')">Wood</button>
+        <button class="choice" onclick="playGame('iron')">Iron</button>
+      </div>
+      <div id="result"></div>
+      <div id="roundResult"></div>
+      <div id="finalResult"></div>
+    </main>
+    <button id="openModal" class="custom-button">
+      TEST
+    </button>
     <script type="text/javascript" src="/scripts/script.js"></script>
     <script type="text/javascript" src="/scripts/anonymous-game.js"></script>
   </body>
