add functional buttons to lose modal

--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -57,7 +57,7 @@
           <span class="close">&times;</span>
           <h2>Your score</h2>
           <div class="button-container">
-            <button id="play-again" class="custom-button" disabled onclick="navigateToGame()">
+            <button id="play-again" class="custom-button" >
               Play Again!
             </button>
             <button id="admit-defeat" class="custom-button secondary-button">
