--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -55,7 +55,8 @@
       <div id="end-game-modal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <h2>Your score</h2>
+          <h2>Your final score...</h2>
+          <h3 id="battles-won"></h3>
           <div class="button-container">
             <button id="play-again" class="custom-button" >
               Play Again!
