add lose messages

--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -57,6 +57,7 @@
           <span class="close">&times;</span>
           <h2>Your final score...</h2>
           <h3 id="battles-won"></h3>
+          <p id="end-message"></p>
           <div class="button-container">
             <button id="play-again" class="custom-button" >
               Play Again!
