add end-game modal for anonymous game

--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -55,15 +55,12 @@
       <div id="end-game-modal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <h2>Your final score...</h2>
-          <h3 id="battles-won"></h3>
-          <p id="end-message"></p>
+          <h2 id="end-result"></h2>
+          <h3 id="end-message"></h3>
           <div class="button-container">
             <button id="play-again" class="custom-button" >
-              Play Again!
             </button>
             <button id="admit-defeat" class="custom-button secondary-button">
-              Admit defeat...
             </button>
           </div>
         </div>
@@ -84,9 +81,6 @@
       <div id="roundResult"></div>
       <div id="finalResult"></div>
     </main>
-    <button id="openModal" class="custom-button">
-      TEST
-    </button>
     <script type="text/javascript" src="/scripts/script.js"></script>
     <script type="text/javascript" src="/scripts/anonymous-game.js"></script>
   </body>
