add endgame modal to sign in game

--- a/pages/game-anonymous.html
+++ b/pages/game-anonymous.html
@@ -65,6 +65,7 @@
           </div>
         </div>
       </div>
+    <!--/modal-->
       <h1>Welcome to Elemental Showdown!</h1>
       <p>Playing as Shadow Warrior</p>
       <h1>Elemental Showdown</h1>
