--- a/pages/game.html
+++ b/pages/game.html
@@ -47,6 +47,21 @@
         <button id="toggleAudio" class="audio-toggle">Toggle Audio</button>
       </nav>
     </header>
+  <!-- Modal -->
+    <div id="end-game-modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 id="end-result"></h2>
+        <h3 id="end-message"></h3>
+        <div class="button-container">
+          <button id="play-again" class="custom-button" >
+          </button>
+          <button id="admit-defeat" class="custom-button secondary-button">
+          </button>
+        </div>
+      </div>
+    </div>
+  <!--/modal-->    
     <main class="game-page-container">
       <h1 id="playerNameHeader"></h1>
 
