--- a/pages/game.html
+++ b/pages/game.html
@@ -40,7 +40,7 @@
         </a>
         <!-- audio -->
         <audio id="backgroundAudio" loop>
-          <source src="./assets/sounds/s-bg.mp3" type="audio/mpeg" />
+          <source src="../assets/sounds/s-bg.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
 
