--- a/pages/game.html
+++ b/pages/game.html
@@ -40,7 +40,7 @@
         </a>
         <!-- audio -->
         <audio id="backgroundAudio" loop>
-          <source src="./assets/sounds/s-bg.mp3" type="audio/mpeg" />
+          <source src="../assets/sounds/s-bg.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
 
@@ -54,9 +54,9 @@
         <h2 id="end-result"></h2>
         <h3 id="end-message"></h3>
         <div class="button-container">
-          <button id="play-again" class="custom-button" >
+            <button id="play-again" class="custom-button" title="Play Again">Play Again</button>
           </button>
-          <button id="admit-defeat" class="custom-button secondary-button">
+            <button id="admit-defeat" class="custom-button secondary-button" title="Admit Defeat">
           </button>
         </div>
       </div>
@@ -127,14 +127,5 @@
       var playerNameElement = document.getElementById("playersName");
       playerNameElement.textContent = playerName;
     </script>
-    <!-- <footer>
-      <p>&copy; 2023 Elemental Showdown. All rights reserved.</p>
-      <nav>
-        <ul>
-          <li><a href="#terms">Terms of Service</a></li>
-          <li><a href="#privacy">Privacy Policy</a></li>
-        </ul>
-      </nav>
-    </footer> -->
   </body>
 </html>
